<resources>
    <string name="app_name">VirtuDoctor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_update">My Profile</string>
    <string name="menu_dashboard">My Dashboard</string>
    <string name="menu_addpatient">Add Patient</string>
    <string name="menu_showpatients">My Patients</string>

    <string-array name="spinner_sex">
        <item>--SEX--</item>
        <item>MALE</item>
        <item>FEMALE</item>
        <item>TRANSGENDER</item>
        <item>OTHERS</item>
    </string-array>

    <string-array name="spinner_category">
        <item>itching</item>
        <item>skin_rash</item>
        <item>nodal_skin_eruptions</item>
        <item>yellowish_skin</item>
        <item>blackheads</item>
        <item>pus_filled_pimples</item>
        <item>skin_peeling, blister</item>
        <item>sweating, bruising</item>
        <item>red_spots_over_body</item>
        <item>dischromic _patches</item>
        <item>yellow_crust_ooze</item>
        <item>silver_like_dusting</item>
        <item>brittle_nails</item>
        <item>small_dents_in_nails</item>
        <item>inflammatory_nails</item>
    </string-array>

    <string-array name="spinner_category1">
        <item>polyuria</item>
        <item>Bladder_discomfort</item>
        <item>foul_smell_of urine</item>
        <item>continuous_feel_of_urine</item>
        <item>Bloody_stool</item>
        <item>Irritation_in_anus</item>
        <item>Yellow_urine</item>
        <item>Diarrhoea</item>
        <item>Constipation</item>
        <item>Dark_urine</item>
        <item>spotting_ urination</item>
        <item>burning_micturition </item>
    </string-array>

    <string-array name="spinner_category2">
        <item>distention_of_abdomen</item>
        <item>stomach_bleeding</item>
        <item>increased_appetite</item>
        <item>excessive_hunger</item>
        <item>swelling_of_stomach</item>
        <item>loss_of_appetite</item>
        <item>acidity</item>
        <item>indigestion</item>
    </string-array>

    <string-array name="spinner_category3">
        <item>belly_pain</item>
        <item>pain_in_anal_region</item>
        <item>pain_during_bowel_movements</item>
        <item>painful_walking</item>
        <item>stomach_pain</item>
        <item>muscle_pain</item>
        <item>stiff_neck,</item>
        <item>hip_joint_pain</item>
        <item>knee_pain </item>
        <item>neck_pain</item>
        <item>chest_pain</item>
        <item>back_pain</item>
        <item>pain_behind_the_eyes</item>
        <item>joint_pain</item>
        <item>stomach_pain</item>
        <item>abdominal_pain</item>
    </string-array>
    <string-array name="spinner_category4">
        <item>cramps</item>
        <item>internal_itching</item>
        <item>abnormal_menstruation</item>
    </string-array>

    <string-array name="spinner_category5">
        <item>lack_of_concentration</item>
        <item>irritability</item>
        <item>depression</item>
        <item>mild_fever</item>
        <item>nausea</item>
        <item>headache</item>
        <item>dehydration </item>
        <item>high_fever</item>
        <item>cough</item>
        <item>lethargy</item>
        <item>restlessness</item>
        <item>anxiety</item>
        <item>fatigue</item>
        <item>vomiting</item>
        <item>chills</item>
        <item>shivering</item>
        <item>dizziness</item>
        <item>passage_of_gases</item>
        <item>breathlessness</item>
        <item>weight_gain</item>
        <item>weight_loss</item>
        <item>mood_swings</item>
    </string-array>

    <string-array name="spinner_category6">
        <item>fluid_overload</item>
        <item>history_of_alcohol_consumption</item>
        <item>receiving_unsterile_injections</item>
        <item>family_history</item>
        <item>slurred_speech</item>
        <item>extra_marital_contacts</item>
        <item>obesity, congestion</item>
        <item>toxic_look_(typhos)</item>
        <item>acute_liver_failure</item>
        <item>irregular_sugar_level</item>
        <item>malaise</item>
        <item>cold_hands_and_feets</item>
    </string-array>

    <string-array name="spinner_category7">
        <item>continuous_sneezing</item>
        <item>runny_nose</item>
        <item>loss_of_smell</item>
        <item>mucoid_sputum</item>
        <item>rusty_sputum</item>
        <item>red_sore_around_nose</item>
        <item>sinus_pressure</item>
        <item>blood_in_sputum</item>
    </string-array>

    <string-array name="spinner_category8">
        <item>weakness_in_limbs</item>
        <item>movement_stiffness</item>
        <item>spinning_movements</item>
        <item>loss_of_balance</item>
        <item>unsteadiness</item>
        <item>scurring</item>
        <item>weakness_of_one_body_side</item>
    </string-array>

    <string-array name="spinner_category9">
        <item>muscle_weakness</item>
        <item>muscle_wasting</item>
    </string-array>

    <string-array name="spinner_category10">
        <item>swollen_legs</item>
        <item>swollen_blood_vessels</item>
        <item>puffy_face_and_eyes</item>
        <item>swollen_extremeties</item>
        <item>swelling_joints, enlarged_thyroid</item>
        <item>swelled_lymph_nodes</item>
    </string-array>

    <string-array name="spinner_category11">
        <item>coma</item>
        <item>altered_sensorium</item>
        <item>fast_heart_rate, palpitations</item>
        <item>receiving_blood_transfusion</item>
        <item>prominent_veins_on_calf</item>
    </string-array>

    <string-array name="spinner_category12">
        <item>watering_from_eyes</item>
        <item>sunken_eyes</item>
        <item>yellowing_of_eyes</item>
        <item>visual_disturbances</item>
        <item>redness_of_eyes</item>
        <item>blurred_and_distorted_vision</item>
        <item>patches_in_throat</item>
        <item>phlegm</item>
        <item>throat_irritation</item>
        <item>drying_and_tingling_lips</item>
        <item>ulcers_on_tongue</item>
    </string-array>



    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

</resources>