<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="General">
        <group android:checkableBehavior="single">

            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_register_24"
                android:title="@string/menu_register" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_baseline_home_24"
                android:visible="false"
                android:title="@string/menu_dashboard" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_baseline_edit"
                android:visible="false"
                android:title="@string/menu_update" />
            <item
                android:id="@+id/nav_ddashboard"
                android:icon="@drawable/ic_baseline_home_24"
                android:visible="false"
                android:title="@string/menu_dashboard" />
            <item
                android:id="@+id/nav_dupdate"
                android:icon="@drawable/ic_baseline_edit"
                android:visible="false"
                android:title="@string/menu_update" />
            <item
                android:id="@+id/nav_addpatient"
                android:icon="@drawable/ic_baseline_addpa"
                android:visible="false"
                android:title="@string/menu_addpatient" />
            <item
                android:id="@+id/nav_showpatients"
                android:icon="@drawable/ic_baseline_user"
                android:visible="false"
                android:title="@string/menu_showpatients" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout"
                android:visible="false"
                android:title="@string/menu_logout" />

        </group>
    </item>


</menu>