<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.miniproject.clinicaldecisionmakingapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.miniproject.clinicaldecisionmakingapp.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.miniproject.clinicaldecisionmakingapp.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_update"
        android:name="com.miniproject.clinicaldecisionmakingapp.ui.dashboard.UpdatePatientFragment"
        android:label="@string/menu_update"
        tools:layout="@layout/fragment_update_patient" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.miniproject.clinicaldecisionmakingapp.ui.dashboard.PatientDashboard"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_patient_dashboard" />

    <fragment
        android:id="@+id/nav_dupdate"
        android:name="com.miniproject.clinicaldecisionmakingapp.ui.dashboard.UpdateDoctorFragment"
        android:label="@string/menu_update"
        tools:layout="@layout/fragment_update_doctor" />
    <fragment
        android:id="@+id/nav_ddashboard"
        android:name="com.miniproject.clinicaldecisionmakingapp.ui.dashboard.DoctorDashboard"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_doctor_dashboard" />
    <fragment
        android:id="@+id/nav_addpatient"
        android:name="com.miniproject.clinicaldecisionmakingapp.ui.dashboard.AddPatientFragment"
        android:label="@string/menu_addpatient"
        tools:layout="@layout/fragment_add_patient" />

    <fragment
        android:id="@+id/nav_showpatients"
        android:name="com.miniproject.clinicaldecisionmakingapp.ui.dashboard.PatientsListsFragment"
        android:label="@string/menu_showpatients"
        tools:layout="@layout/fragment_patients_lists" />

</navigation>